app/vproapp-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01
spec:
  ports:
  - port: 80
    targetPort: app01-port
    protocol: TCP
  selector:
    app: app01
  type: LoadBalancer
